--- a/datazoneservice/pom.xml
+++ b/datazoneservice/pom.xml
@@ -57,6 +57,10 @@
             <artifactId>hutool-all</artifactId>
             <version>5.3.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
